1999-11-08  Jochen Wiedmann  <joe@ispsoft.de> (0.2004)

	* lib/HTML/EP.pm (EncodeByAttr): Fixed a bug in HTML output
	  ("= ~" instead of "=~")

1999-09-28  Jochen Wiedmann  <joe@ispsoft.de> (0.20_02)

	* Added hints for installation with IIS.
	* ep.cgi.PL: $ARGV[0] is now setting $ENV{'PATH_TRANSLATED'}
	  for use with IIS.
	* lib/HTML/EP.pm: ep-elseif may now be called as ep-elsif
	  Jason McMullan <jmcc@ontv.com>.
	* lib/HTML/EP.pm: ep-package may now be called many times;
	  $self is blessed into a new package that inherits from all.
	  Suggested by Jason McMullan <jmcc@ontv.com>.

1999-09-27  Jochen Wiedmann  <joe@ispsoft.de> (0.20_01)

	* Makefile.PL: Fixed a missing "require Data::Dumper".

1999-09-24  Jochen Wiedmann  <joe@ispsoft.de> (0.20_00)

	* Merged in patches of Jason McMullan (jmcc@ontv.com) for
	  nested ep-list. A major update!
	* Replaced URI::Escape::uri_escape with CGI->escape

1999-09-19  Jochen Wiedmann  <joe@ispsoft.de> (0.1135)

	* lib/HTML/EP.pm (_ep_input): Added handling of NULL dates.
	* lib/HTML/EP.pm: Added ep-input-sql-query.

1999-08-31  Jochen Wiedmann  <joe@ispsoft.de> (0.1134)
  
        * lib/HTML/EP/Install.pm: Added InstallFiles and InstallCgiFiles.
  
1999-08-27  Jochen Wiedmann  <joe@ispsoft.de> (0.1133)

	* lib/HTML/EP/Session.pm: Added support for multiple sessions.
	* lib/HTML/EP/Session.pm (_ep_session_delete): Renamed subclass
	  methods delete, open and store to Delete, Open and Store, in
	  order to avoid confusion with Perl's builtin functions of the
	  same names.
	* lib/HTML/EP.pm (ParseVar): Forcing uri_escape to escape anything
	  besides \w. Seems some browsers have problems with
	  certain other characters.

1999-08-23  Jochen Wiedmann  <joe@ispsoft.de> (0.1132)

	* Added HTML::EP::Install.
	* lib/HTML/EP/Session/DBI.pm: Moved DBI session to an external file.
	* Added HTML::EP::Session::DBIq. Suggested by Ilya Ketris
	  <ilya@gde.to>.
	* Added HTML::EP::Session::Dumper.
