@@ -298,7 +298,7 @@
 	if (!defined($str)) {
 	    $str = $self->{'accept_nulls'} ? "NULL" : "";
 	} else {
-	    $str =~ s/([<&>"\$])/$HTML::Entities::char2entity{$1}/g;
+	    $str = $self->escapeHTML($str);
 	}
 	$str;
     };
